@@ -22,7 +22,6 @@ import static java.util.UUID.randomUUID;
 
 import java.io.Serializable;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -32,13 +31,13 @@ import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Stream;
 
 import org.apache.openmeetings.db.dao.user.UserDao;
 import org.apache.openmeetings.db.entity.IDataProviderEntity;
 import org.apache.openmeetings.db.entity.room.Room;
 import org.apache.openmeetings.db.entity.room.Room.Right;
 import org.apache.openmeetings.db.entity.user.User;
-import org.apache.wicket.util.collections.ConcurrentHashSet;
 import org.apache.wicket.util.string.Strings;
 
 import com.github.openjson.JSONArray;
@@ -69,8 +68,8 @@ public class Client implements IDataProviderEntity, IWsClient {
 	private final String uid;
 	private final String sid;
 	private String remoteAddress;
-	private final Set<Right> rights = new ConcurrentHashSet<>();
-	private final Set<Activity> activities = new ConcurrentHashSet<>();
+	private final Set<Right> rights = ConcurrentHashMap.newKeySet();
+	private final Set<Activity> activities = ConcurrentHashMap.newKeySet();
 	private final Map<String, StreamDesc> streams = new ConcurrentHashMap<>();
 	private final Date connectedSince;
 	private int cam = -1;
@@ -110,7 +109,11 @@ public class Client implements IDataProviderEntity, IWsClient {
 	}
 
 	public Long getUserId() {
-		return user.getId();
+		return user == null ? null : user.getId();
+	}
+
+	public boolean sameUserId(Long userId) {
+		return getUserId() == null ? false : getUserId().equals(userId);
 	}
 
 	public String getPictureUri() {
@@ -133,27 +136,27 @@ public class Client implements IDataProviderEntity, IWsClient {
 	}
 
 	public boolean hasRight(Right right) {
-		if (Right.superModerator == right) {
+		if (Right.SUPER_MODERATOR == right) {
 			return rights.contains(right);
 		}
-		return rights.contains(Right.superModerator) || rights.contains(Right.moderator) || rights.contains(right);
+		return rights.contains(Right.SUPER_MODERATOR) || rights.contains(Right.MODERATOR) || rights.contains(right);
 	}
 
-	public Client allow(Right... _rights) {
-		allow(Arrays.asList(_rights));
+	public Client allow(Right... inRights) {
+		allow(List.of(inRights));
 		return this;
 	}
 
-	public void allow(Iterable<Right> _rights) {
-		for (Right right : _rights) {
+	public void allow(Iterable<Right> inRights) {
+		for (Right right : inRights) {
 			if (!hasRight(right)) {
 				rights.add(right);
 			}
 		}
 	}
 
-	public void deny(Right... _rights) {
-		for (Right right : _rights) {
+	public void deny(Right... inRights) {
+		for (Right right : inRights) {
 			rights.remove(right);
 		}
 	}
@@ -219,28 +222,42 @@ public class Client implements IDataProviderEntity, IWsClient {
 		return this;
 	}
 
-	public StreamDesc addStream(StreamType stype, Activity...activities) {
-		StreamDesc sd = new StreamDesc(stype, activities);
+	public StreamDesc addStream(StreamType stype, Activity...inActivities) {
+		StreamDesc sd = new StreamDesc(stype, inActivities);
 		streams.put(sd.getUid(), sd);
 		return sd;
 	}
 
-	public StreamDesc removeStream(String _uid) {
-		return streams.remove(_uid);
+	public StreamDesc removeStream(String inUid) {
+		return streams.remove(inUid);
 	}
 
 	public List<StreamDesc> getStreams() {
 		return new ArrayList<>(streams.values());
 	}
 
-	public StreamDesc getStream(String _uid) {
-		return streams.get(_uid);
+	public StreamDesc getStream(String inUid) {
+		return streams.get(inUid);
 	}
 
 	public Optional<StreamDesc> getScreenStream() {
 		return streams.values().stream()
 				.filter(sd -> StreamType.SCREEN == sd.getType())
 				.findFirst();
+	}
+
+	public Stream<StreamDesc> getCamStreams() {
+		return streams.values().stream()
+				.filter(sd -> StreamType.WEBCAM == sd.getType());
+	}
+
+	public Client restoreActivities(StreamDesc sd) {
+		synchronized (activities) {
+			Set<Activity> aa = new HashSet<>(sd.sactivities);
+			activities.clear();
+			activities.addAll(aa);
+		}
+		return this;
 	}
 
 	public Date getConnectedSince() {
@@ -348,7 +365,8 @@ public class Client implements IDataProviderEntity, IWsClient {
 				a.put("country", user.getAddress().getCountry());
 			}
 		}
-		return o.put("user", u);
+		return o.put("user", u)
+				.put("level", hasRight(Right.MODERATOR) ? 5 : (hasRight(Right.WHITEBOARD) ? 3 : 1));
 	}
 
 	public JSONObject toJson(boolean self) {
@@ -429,13 +447,13 @@ public class Client implements IDataProviderEntity, IWsClient {
 
 	@Override
 	public String toString() {
-		return "Client [uid=" + uid + ", sessionId=" + sessionId + ", pageId=" + pageId + ", userId=" + user.getId() + ", room=" + (room == null ? null : room.getId())
+		return "Client [uid=" + uid + ", sessionId=" + sessionId + ", pageId=" + pageId + ", userId=" + getUserId() + ", room=" + getRoomId()
 				+ ", rights=" + rights + ", sactivities=" + activities + ", connectedSince=" + connectedSince + "]";
 	}
 
 	public class StreamDesc implements Serializable {
 		private static final long serialVersionUID = 1L;
-		private final Set<Activity> sactivities = new ConcurrentHashSet<>();
+		private final Set<Activity> sactivities = ConcurrentHashMap.newKeySet();
 		private final String uuid;
 		private final StreamType type;
 		private int swidth;
@@ -455,13 +473,13 @@ public class Client implements IDataProviderEntity, IWsClient {
 			if (activities == null || activities.length == 0) {
 				setActivities();
 			} else {
-				sactivities.addAll(Arrays.asList(activities));
+				sactivities.addAll(List.of(activities));
 			}
 			if (StreamType.SCREEN == type) {
 				this.swidth = 800;
 				this.sheight = 600;
 			} else if (StreamType.WEBCAM == type) {
-				boolean interview = room != null && Room.Type.interview == room.getType();
+				boolean interview = room != null && Room.Type.INTERVIEW == room.getType();
 				this.swidth = interview ? 320 : width;
 				this.sheight = interview ? 260 : height;
 			}
@@ -530,8 +548,8 @@ public class Client implements IDataProviderEntity, IWsClient {
 			return Client.this;
 		}
 
-		private JSONArray getActivities() {
-			return new JSONArray(new ArrayList<>(sactivities));
+		public List<Activity> getActivities() {
+			return List.copyOf(sactivities);
 		}
 
 		public JSONObject toJson() {
@@ -540,7 +558,7 @@ public class Client implements IDataProviderEntity, IWsClient {
 					.put("type", type.name())
 					.put("width", swidth)
 					.put("height", sheight)
-					.put("activities", getActivities())
+					.put("activities", new JSONArray(sactivities))
 					.put("cuid", uid));
 		}
 
